--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
-src/setup/hardn-main.sh        usr/share/hardn-xdr/hardn-main.sh
-src/setup/modules/*            usr/share/hardn-xdr/modules/
-install.sh                     usr/share/hardn-xdr/install.sh
+src/setup/hardn-main.sh        usr/share/hardn/
+src/setup/modules/*            usr/share/hardn/modules/
+install.sh                     usr/share/hardn/
 hardn-xdr                      usr/bin/
