--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
-src/setup/hardn-main.sh        usr/lib/hardn-xdr/src/setup/
-src/setup/modules/*            usr/lib/hardn-xdr/src/setup/modules/
-install.sh                     usr/lib/hardn-xdr/
+install.sh                     usr/share/hardn-xdr/
+src/setup/hardn-main.sh        usr/share/hardn-xdr/src/setup/
+src/setup/modules/*            usr/share/hardn-xdr/src/setup/modules/
 hardn-xdr                      usr/bin/
