--- a/debian/install
+++ b/debian/install
@@ -2,3 +2,4 @@ install.sh                     usr/share/hardn-xdr/
 src/setup/hardn-main.sh        usr/share/hardn-xdr/src/setup/
 src/setup/modules/*            usr/share/hardn-xdr/src/setup/modules/
 hardn-xdr                      usr/bin/
+docs/hardn-xdr.1               usr/share/man/man1/
