--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ hardn (1.1.0) unstable; urgency=medium
 
   * Initial release.
 
- -- Tim Burns <tim@cybersynapse.ro>  Tue, 01 Jul 2025 00:00:00 +0000
+ -- Tim Burns <office@cybersynapse.ro>  Tue, 01 Jul 2025 00:00:00 +0000
