--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,4 @@
-install.sh                      usr/lib/hardn-xdr/
-src/setup/hardn-main.sh          usr/lib/hardn-xdr/src/setup/
-src/setup/modules                usr/lib/hardn-xdr/src/setup/modules/
-hardn-xdr                        usr/bin/
-man/hardn-xdr.1                  usr/share/man/man1/
+src/*                              usr/lib/hardn-xdr/src/
+hardn-xdr                           usr/bin/
+man/hardn-xdr.1                     usr/share/man/man1/
+install.sh                          usr/lib/hardn-xdr/
