--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-hardn (1.1.121) unstable; urgency=medium
+hardn (1.1.126) unstable; urgency=medium
 
-  * Automated release 1.1.121
-  * Includes STIG compliance modules and multi-architecture improvements.
+  * Automated release v1.1.126
 
- -- Tim Burns <cyborgcreations01@gmail.com>  Sun, 07 Jul 2025 14:30:00 -0400
+ -- Tim Burns <cyborgcreations01@gmail.com>  San, 07 Jul 2025 09:04:00 +0000
