--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,4 @@
-src/*                              usr/lib/hardn-xdr/src/
 hardn-xdr                           usr/bin/
-man/hardn-xdr.1                     usr/share/man/man1/
 install.sh                          usr/lib/hardn-xdr/
+man/hardn-xdr.1                     usr/share/man/man1/
+src/setup/                          usr/lib/hardn-xdr/src/setup/
