--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-hardn (1.1.126) unstable; urgency=medium
+hardn (1.1.144) unstable; urgency=medium
 
-  * Automated release v1.1.127
+  * Automated release v1.1.144
 
- -- Tim Burns <cyborgcreations01@gmail.com>  San, 07 Jul 2025 10:22:00 +0000
+ -- Tim Burns <cyborgcreations01@gmail.com>  monday, 08 Jul 2025 10:48:00 +0000
