--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,5 @@
-hardn-xdr                          usr/bin/
-install.sh                          usr/lib/hardn-xdr/
-man/hardn-xdr.1                     usr/share/man/man1/
-src/setup/                          usr/lib/hardn-xdr/src/setup/
-src/setup/modules/*                 usr/lib/hardn-xdr/src/setup/modules/
+src/setup/hardn-main.sh          usr/lib/hardn-xdr/src/setup/
+src/setup/modules/*              usr/lib/hardn-xdr/src/setup/modules/
+install.sh                       usr/lib/hardn-xdr/
+hardn-xdr                        usr/bin/
+man/hardn-xdr.1                  usr/share/man/man1/
